Test z římského práva update.

--- a/docs/rimske-pravo/rimske-pravo-test.mdx
+++ b/docs/rimske-pravo/rimske-pravo-test.mdx
@@ -1798,6 +1798,20 @@ Náš interaktivní test z římského práva je upravenou verzí známého _meg
   </QuizOption>
 </Quiz>
 
+<Quiz question={"Princip pekuniární kondemnace znamená: "} topic={civilniProces}>
+  <QuizOption label={"rozsudek musí znít vždy na peněžitou částku"} isCorrect={true}>
+    KUS str. 120 odst. 199: _„Rozsudek zněl vždy na peníze, v soukromém procesu platil princip pekuniární kondemnace. To znamená, že ať byl nárok žalobcův jakýkoli, musel soud provést jeho ocenění v penězích (litis aestimatio) a teprve potom mohl být vynesen rozsudek.“_
+  </QuizOption>
+  <QuizOption label={"žalují se jen ty nároky, které jsou určeny v peněžité formě"} isCorrect={false}>
+    Ne, žalovat šlo nepeněžité nároky, ale soud je následně ocenil penězi, viz KUS str. 120 odst. 199.
+  </QuizOption>
+  <QuizOption label={"rozsudek je vždy ve formě peněžité pokuty"} isCorrect={false}>
+    Ne, nejedná se o pokutu, viz KUS str. 120 odst. 199.
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených možností"} isCorrect={false}>
+  </QuizOption>
+</Quiz>
+
 <Quiz question={"Mezi způsoby mimosoudních řešení sporu patří: "} topic={civilniProces}>
   <QuizOption label={"transactio"} isCorrect={true}>
     Instituce, s. 280: _„Mimosoudní řešení sporů:  - smír (transactio), strany si činí navzájem ústupky a poskytují si částečná plnění.“_
@@ -2118,7 +2132,6 @@ Náš interaktivní test z římského práva je upravenou verzí známého _meg
   </QuizOption>
 </Quiz>
 
-
 <Quiz question={"Soused na svém pozemku hloubí jámu a ohrožuje statiku mojí stavby. Mohu se bránit  pomocí: "} topic={vecnaPrava}>
   <QuizOption label={"cautio damni infecti"} isCorrect={false}>
     Ano, zde opravdu použiji cautio damni infecti.
@@ -2139,372 +2152,353 @@ Náš interaktivní test z římského práva je upravenou verzí známého _meg
   </QuizOption>
 </Quiz>
 
-
-<Quiz question={"Fikce actio Publiciana in rem spočívá v přimyšlení si: "}>
-  <QuizOption label={"že žalobce se stal vlastníkem věci"} isCorrect={false}>
-    (KUS str. 160 odst, 269\)
+<Quiz question={"Fikce actio Publiciana in rem spočívá v přimyšlení si: "} topic={civilniProces}>
+  <QuizOption label={"že žalobce se stal vlastníkem věci"} isCorrect={true}>
+    Instituce, s. 121: _„Actio Publiciana in rem [je] actio ficticia, kdy praetor soudci přikazoval, aby si přimyslel, že již pro běhla vydržecí doba a držitel se stal civilním vlastníkem.“_
   </QuizOption>
   <QuizOption label={"že žalobce by byl vlastníkem věci, pokud by již uběhl vydržecí čas"} isCorrect={true}>
-    (*tady si nejsem jistá tím podmiňovacím způsobem pokud by již uběhl – fikce je, že už uběhl (KUS str. 160 odst, 269\)
+    KUS, marg. č. 269, s. 160: _„Publiciánská žaloba byla proto koncipována jako žalobafiktivní (actio ficticia): soudce měl vztahy mezi stranami posuzovat tak, jakoby vydržecí doba již uplynula a nabyvatel se stal civilním vlastníkem na základě vydržení; zmíněný předpoklad byl tedy v žalobním formuláři publiciánské žaloby fingován, soudce si jej měl představit - přimyslit.“_
   </QuizOption>
   <QuizOption label={"že žalobce by se stal vlastníkem, pokud by mu žalovaný věc nesebral"} isCorrect={false}>
-    
   </QuizOption>
   <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
   </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
+</Quiz>  
+
+<Quiz question={"Defenzní povinnost: "} topic={civilniProces}>
   <QuizOption label={"má u všech druhů žalob vždy žalovaný"} isCorrect={false}>
-    (*ne u všech žalob)
+    Ne, například u actiones in rem defenzní povinnost neexistuje (Instituce, s. 255).
   </QuizOption>
   <QuizOption label={"má u actiones in personam vždy žalobce"} isCorrect={false}>
-    (*povinnost žalovaného)
+    Ne, defenzní povinnost je povinností žalovaného. 
+
+    Instituce, s. 261: _„Defenzní povinnost - povinnost žalovaného účastnit se aktivně na vytvoření podmínek pro vedení sporu (uzavření litiskontestace) a vynesení rozsudku.“_
   </QuizOption>
   <QuizOption label={"má u actiones in rem vždy žalovaný"} isCorrect={false}>
-    (*není u actiones in rem (Insitutce online verze str. 269\)
+    Ne, u actiones in rem defenzní povinnost neexistuje (Instituce, s. 255).
+  </QuizOption>
+  <QuizOption label={"je nevynutitelná"} isCorrect={false}>
+    Ne, defenzní povinnost je vynutitelná. 
+
+    KUS, marg. č. 344, s. 227: _„Dlužníka totiž vázala tzv. defenzní povinnost, dlužník se musel před magistrátem obhajovat (musel vstoupit do sporu), protože jinak mu hrozilo nebezpečí, že praetor okamžitě zahájí majetkovou exekuci, tj. vyhlásí ‚missio in  bona‘ - povolení věřiteli, aby se ujal všeho dlužníkova majetku, eventuálně  výjimečně i dlužníkovy osoby.“_
+  </QuizOption>
+  <QuizOption label={"tíží žalobce"} isCorrect={false}>
+    Ne, defenzní povinnost je povinností žalovaného. 
+
+    Instituce, s. 261: _„Defenzní povinnost - povinnost žalovaného účastnit se aktivně na vytvoření podmínek pro vedení sporu (uzavření litiskontestace) a vynesení rozsudku.“_
+  </QuizOption>
+  <QuizOption label={"tíží žalovaného jen v případě osobních žalob"} isCorrect={true}>
+    Ano, protože u actiones in rem neexistuje (Instituce, s. 255).
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Mezi druhy císařských konstitucí patří: "}>
+<Quiz question={"Mezi druhy císařských konstitucí patří: "} topic={pramenyPrava}>
   <QuizOption label={"dekreta císaře"} isCorrect={true}>
-    (KUS – str. 28 – závazné – povaha precedentu)
+    Ano, viz Instituce, s. 29.
   </QuizOption>
   <QuizOption label={"mandata úředníkům"} isCorrect={true}>
-    (KUS str. 28 odst. 41 – závazné \-\> mandata \= rozkazy)
+    Ano, viz Instituce, s. 29.
   </QuizOption>
   <QuizOption label={"rozhodnutí císařského soudu"} isCorrect={true}>
-    (= decreta, KUS str. 28 odst. 41\)
+    Ano, jedná se o decreta, viz Instituce, s. 29.
   </QuizOption>
-  <QuizOption label={"instrukce úředníkům"} isCorrect={true}>
-    (= mandata, KUS str. 28 odst. 41 – závazné)
+  <QuizOption label={"rescripta"} isCorrect={true}>
+    Ano, viz Instituce, s. 29.
   </QuizOption>
-</Quiz>
-
-<Quiz question={"Mezi druhy císařských konstitucí nepatří: "}>
-  <QuizOption label={"dekreta císaře"} isCorrect={false}>
-    (KUS – str. 28 – závazné – povaha precedentu)
+  <QuizOption label={"responsa"} isCorrect={false}>
+    Responsa byly odpovědi právníků, viz Instituce, s. 29.
   </QuizOption>
-  <QuizOption label={"mandata úředníkům"} isCorrect={false}>
-    (KUS – str. 28 – závazné \-\> mandata \= rozkazy)
+  <QuizOption label={"retributa"} isCorrect={false}>
+    Retributa není pojem z římského práva. 
   </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"instrukce úředníkům"} isCorrect={false}>
-    (KUS – str. 28 – závazné \- mandata)
+  <QuizOption label={"edicta"} isCorrect={true}>
+    Ano, viz Instituce, s. 29.
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Právní jednání kauzální je: "}>
+<Quiz question={"Právní jednání kauzální je: "} topic={pravniJednani}>
   <QuizOption label={"podmíněné"} isCorrect={false}>
-    
   </QuizOption>
-  <QuizOption label={"opodstatněné"} isCorrect={false}>
-    ([*https://ssjc.ujc.cas.cz/search.php?hledej=Hledat\&heslo=opodstatn%C4%9Bn%C3%BD\&sti=EMPTY\&where=hesla\&hsubstr=no*](https://ssjc.ujc.cas.cz/search.php?hledej=Hledat&heslo=opodstatn%C4%9Bn%C3%BD&sti=EMPTY&where=hesla&hsubstr=no) *)
+  <QuizOption label={"opodstatněné"} isCorrect={true}>
+    Ano, kauzální právní jednání je jednání opodstatněné. 
+
+    Instituce, s. 285: _„Kauzální [právní jednání] – při zkoumání platnosti právního jednání se přihlíží k důvodu, proč bylo uzavřeno, jedná se zároveň o neformální právní jednání.“_
+
+    Instituce, s. 285: _„Neformální – platnost právního jednání nezávisí na dodržení předepsané formy, ale na naplnění dovoleného důvodu.“_
   </QuizOption>
   <QuizOption label={"náhodné"} isCorrect={false}>
-    
   </QuizOption>
   <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    (jednání, kde se přihlíží k důvodu převodu (Instituce online verze str. 302\)
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Mezi typická vlastníkova oprávnění nepatří: "}>
+<Quiz question={"Mezi typická vlastníkova oprávnění nepatří: "} topic={vecnaPrava}>
   <QuizOption label={"ius possidendi"} isCorrect={false}>
-    (právo věc držet, Instituce str.103 \+ KUS str. 154 odst. 258\)
-  </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={true}>
-    (všechny patří – isu possidendi, abutendi, utendi, fruendi, KUS str. 154 odst. 258\)
+    Ne, toto je typické právo vlastníka, viz Instituce, s. 103.
   </QuizOption>
   <QuizOption label={"ius abutendi"} isCorrect={false}>
-    (právo věc zničit, Instituce str.103 \+ KUS str. 154 odst. 258\)
+    Ne, toto je typické právo vlastníka, viz Instituce, s. 103. 
   </QuizOption>
   <QuizOption label={"ius utendi"} isCorrect={false}>
-    (právo věc užívat, Instituce str.103 \+ KUS str. 154 odst. 258\)
+    Ne, toto je typické právo vlastníka, viz Instituce, s. 103.
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={true}>
+    Ano, všechno výše vyjmenované jsou typická oprávnění vlastníka.
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Důsledkem prekluze je: "}>
+<Quiz question={"Důsledkem prekluze je: "} topic={civilniProces}>
   <QuizOption label={"zákaz podat žalobu"} isCorrect={false}>
-    
+    Ne, to prekluze neznamená.
   </QuizOption>
   <QuizOption label={"vznik nedluhu"} isCorrect={false}>
-    
+    Ne, nedluh vzniká omylem dlužníka i věřitele, viz KUS, marg. č. 365, s. 249-250.
   </QuizOption>
   <QuizOption label={"zánik nároku"} isCorrect={true}>
-    (*jelikož se jedná o zánik práva jako takového, zaniká také nárok, aby z takového práva bylo plněno*)
+    Ano, prekluze znamená zánik nároku. 
+
+    KUS, marg. č. 386, s. 295: _„Žádost musila být magistrátu předložena do určité lhůty, po jejímž uplynutí nebylo již možno o udělení držby žádat, byla to tedy lhůta propadná, prekluzivní.“_
   </QuizOption>
   <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Exhibitorní interdicta: "}>
-  <QuizOption label={"patří mezi držební interdicta"} isCorrect={false}>
-    (*exh. dělení dle obsahu ne předmětu úpravy – držební (KUS str. 128 odst. 212 \+ z nahlížení po testu)
+<Quiz question={"Exhibitorní interdicta: "} topic={civilniProces}>
+  <QuizOption label={"patří mezi držební interdicta"} isCorrect={true}>
+    Ne, exhibitorní interdicta je jiná kategorie, do držebních interdiktů nespadá.
   </QuizOption>
   <QuizOption label={"zakazují něco ukázat"} isCorrect={false}>
-    (interdicta prohibitoria, KUS str. 128 odst. 212 \+ z nahlížení po testu)
-  </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
+    Ne, to je přesný opak. 
   </QuizOption>
   <QuizOption label={"přikazují něco přinést"} isCorrect={false}>
-    (příkaz, aby osoba něco vykonala (KUS str. 128 odst. 212 \+ z nahlížení po testu)
+    Instituce, s. 274: _„Interdicta exhibitoria - ukládají povinnost předložit nějakou věc, nebo předvést člověka (např. i. hornině exhibendo, i. de tabulis exhibendis).“_
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Corporalis possessio je: "}>
+<Quiz question={"Corporalis possessio je: "} topic={vecnaPrava}>
   <QuizOption label={"oprávnění subjektu k faktickému ovládání věci"} isCorrect={false}>
-    
+    Ne, nejedná se o oprávnění, ale faktický stav, viz Instituce, s. 123.
   </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"jednou z podmínek držby"} isCorrect={false}>
-    
+  <QuizOption label={"jednou z podmínek držby"} isCorrect={true}>
+    Instituce, s. 123: _„Držitel (possessor) je proto každý, kdo splňuje oba prvky držby o objektivní prvek - corporalis possessio (corpus) … subjektivní prvek animus rem sibi habendi (animus) …“_
   </QuizOption>
   <QuizOption label={"vůle subjektu k faktickému ovládání věci"} isCorrect={false}>
-    
+    Ne, to je animus possidendi, viz Instituce, s. 123. 
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Corporalis possessio NENÍ: "}>
-  <QuizOption label={"jednou z podmínek držby"} isCorrect={false}>
-    (KUS – str. 163* – *je fyzickým ovládáním věci a podmínkou držby)
-  </QuizOption>
-  <QuizOption label={"oprávnění subjektu k faktickému ovládání věci"} isCorrect={false}>
-    (KUS – str. 162* – *není fyzickým ovládáním věci)
-  </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"vůle subjektu k faktickému ovládání věci"} isCorrect={false}>
-    (KUS – str. 162* – *není fyzickým ovládáním věci)
-  </QuizOption>
-</Quiz>
-
-<Quiz question={"Inskripce fragmentu justiniánských Digest obsahuje: "}>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
+<Quiz question={"Inskripce fragmentu justiniánských Digest obsahuje: "} topic={pramenyPrava}>
   <QuizOption label={"dataci – není v inskripci"} isCorrect={false}>
-    (KUS str. 47 odst. 75\)
+    Ne, viz KUS, marg. č. 75, s. 47.
   </QuizOption>
   <QuizOption label={"jméno schvalujícího císaře – není v inskripci"} isCorrect={false}>
-    (KUS str. 47 odst. 75\)
+    Ne, viz KUS, marg. č. 75, s. 47.
   </QuizOption>
-  <QuizOption label={"jméno autora"} isCorrect={false}>
-    (inskripce obsahovala jméno autora a název spisu, ze kterého látka čerpá (KUS str. 47 odst. 75\)
+  <QuizOption label={"jméno autora"} isCorrect={true}>
+    KUS, marg. č. 75, s. 47: _„Podle nařízení císaře stojí na začátku každého fragmentu jméno autora a název spisu, ze kterého se látka čerpá: tato tzv. inscriptio má velký historický význam, protože umožňuje poznávat tvorbu jednotlivých autorů, byť i jenom z fragmentů úryvků.“_
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Princip pekuniární kondemnace $$$se u negatorní žaloby projeví tím, že: "}>
+<Quiz question={"Princip pekuniární kondemnace se u negatorní žaloby projeví tím, že: "} topic={civilniProces}>
   <QuizOption label={"žalovaný bude odsouzen k náhradě škody"} isCorrect={false}>
-    (KUS str. 120 odst. 199\)
+    Ne, viz KUS str. 120 odst. 199.
   </QuizOption>
   <QuizOption label={"žalovaný bude povinen uvést věc do původního stavu"} isCorrect={false}>
-    (KUS str. 120 odst. 199\)
+    Ne, viz KUS str. 120 odst. 199.
   </QuizOption>
   <QuizOption label={"žalovanému bude pod pokutou zakázáno další působení na věc"} isCorrect={false}>
-    (KUS str. 120 odst. 199\)
+    Ne, viz KUS str. 120 odst. 199.
   </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    (pekuniární kondemnace znamená, že nárok žalobce bude soudem vždy oceněn penězi (KUS str. 120 odst. 199\)
-  </QuizOption>
-</Quiz>
-
-<Quiz question={"Princip pekuniární kondemnace znamená: "}>
-  <QuizOption label={"rozsudek musí znít vždy na peněžitou částku"} isCorrect={false}>
-    (soud před vynesením rozsudku žalobcův nárok vždy musel ocenit v penězích (KUS str. 120 odst. 199\)
-  </QuizOption>
-  <QuizOption label={"žalují se jen ty nároky, které jsou určeny v peněžité formě"} isCorrect={false}>
-    (*žalovat šlo nepeněžité nároky, ale soud je následně ocenil penězi (KUS str. 120 odst. 199\)
-  </QuizOption>
-  <QuizOption label={"rozsudek je vždy ve formě peněžité pokuty – nejednalo se o pokutu, ale ocenění nároku"} isCorrect={false}>
-    (KUS str. 120 odst. 199\)
-  </QuizOption>
-  <QuizOption label={"ani jedna z nabízených možností"} isCorrect={false}>
-    
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={true}>
+    KUS str. 120 odst. 199: _„Rozsudek zněl vždy na peníze, v soukromém procesu platil princip pekuniární kondemnace. To znamená, že ať byl nárok žalobcův jakýkoli, musel soud provést jeho ocenění v penězích (litis aestimatio) a teprve potom mohl být vynesen rozsudek.“_
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Věcné právo užívat bezplatně byt je podle justiniánského práva: "}>
+
+<Quiz question={"Věcné právo užívat bezplatně byt je podle justiniánského práva: "} topic={vecnaPrava}>
   <QuizOption label={"superficiární právo"} isCorrect={false}>
-    (Superficies – dědičné právo stavby na cizím pozemku)
+    Ne, jedná se o habitatio. 
+
+    Instituce, s. 134: _„Superficies – věcné právo, na jehož základě osoba odlišná od vlastníka může postavit a vlastnit budovu, aniž by byla vlastníkem pozemku, na němž je postavena.“_   
   </QuizOption>
-  <QuizOption label={"osobní služebnost"} isCorrect={false}>
-    (KUS – str. 192 – omezení vlastníka bytu)
+  <QuizOption label={"osobní služebnost"} isCorrect={true}>
+    Ano, Instituce uvádí mezi osobními služebnostmi.
+    
+    Instituce, s. 134: _„Habitatio – právo bydlet v cizím domě nebo bytě a poskytnout ubytování dalším osobám (případně i za úplatu), jako zvláštní právní institut zavádí teprve justiniánské právo, do té doby se jednalo o usus nebo ususfructus.“_
   </QuizOption>
   <QuizOption label={"reálné břemeno"} isCorrect={false}>
-    (https://wiki.iurium.cz/w/Re%C3%A1ln%C3%A1\_b%C5%99emena)
+    Ne, římské právo reálné břemeno nezná. 
   </QuizOption>
   <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Taxatio: "}>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
+<Quiz question={"Taxatio: "} topic={civilniProces}>
   <QuizOption label={"je označením pro mimořádnou daň"} isCorrect={false}>
-    
+    Ne, taxatio je procesněprávní pojem.
   </QuizOption>
   <QuizOption label={"je stanovením nejnižší sumy, na kterou může být odsouzen žalovaný"} isCorrect={false}>
-    
+    Ne, je to přesný opak.
   </QuizOption>
   <QuizOption label={"je maximalizací výše kondemnační částky"} isCorrect={false}>
-    (http://www.ius-wiki.eu/rimske-pravo/slovnicek/taxatio)
+    Instituce, s. 269: _„Taxatio - maximalizace výše hodnoty sporu, do níž může soudce vynést rozsudek (např. actio iniuriarum aestimatoria, nebo v pří padě benefcium.“_ competentiae)
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
+    
   </QuizOption>
 </Quiz>
 
 <Quiz question={"Mezi derivativní způsoby nabytí vlastnictví patří: "}>
   <QuizOption label={"adjudikace"} isCorrect={true}>
-    (KUS – str. 175\) Inst \- 106-110 (soudním výrokem)
+    Ano, KUS řadí mezi derivativní způsoby, marg. č. 289, s. 175.
   </QuizOption>
   <QuizOption label={"injurecese"} isCorrect={true}>
-    (KUS – str. 172\)
+    Instituce, s. 113: _„In iure cessio - převod vlastnického práva spočívající ve fingovaném pro cesu, kdy nabyvatel ukáže hůlkou (festuca) na předmět převodu a pronese žalobní formuli, zcizitel na dotaz magistráta mlčí, a ten pak vynese rozsu dek ve prospěch nabyvatele.“_
   </QuizOption>
   <QuizOption label={"tradice"} isCorrect={true}>
-    (KUS – str. 172\)
+    Instituce, s. 113: _„Traditio - převod vlastnického práva k věci jejím předáním z ruky do ruky.“_
   </QuizOption>
   <QuizOption label={"mancipace"} isCorrect={true}>
-    (KUS – str. 170-1)
+    Ano, patří mezi derivativní způsoby, viz Instituce, s. 112-113.
+  </QuizOption>
+  <QuizOption label={"ze zákona"} isCorrect={true}>
+    KUS, marg. č. 289, s. 175: _„Jinak bylo možno vlastnické právo nabýt i rozhodnutím magistrátu (např. hrozila-li vlastníkovi sousedního pozemku škoda - tzv. damnum infectum, mohl magistrátským rozhodnutím nabýt bonitární vlastnictví). V některých případech docházelo pak konečně k nabytí vlastnického práva i přímo ze zákona; pak hovoříme o převodu vlastnictví zákonem (lege).“_
+  </QuizOption>
+  <QuizOption label={"nabytí od státu"} isCorrect={true}>
+    KUS, marg. č. 289, 174: _„K derivativním způsobům nabytí vlastnického práva je možno přiřadit jako samostatné nabývací zůsoby několik speciálních případů. Šlo v prvé řadě o nabytí vlastnictvíke státním pozemkům (ager publicus), přiděleným formou tzv. asignací, dále o nabytí vlastnictví k válečné kořisti, která byla prodávána ve veřejné dražbě quaestory a konečně o nabytí jmění, které bylo jako celek prodáno ve veřejné dražbě, protože bylo vlastníkovi odňato na základě odsouzení nebo na základě toho, že byl dlužníkem státu; nabyvatel - kupec se pak stával univerzálním sukcesorem. Ve všech uvedených případech je možno hovořit o nabytí od státu.“_
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Derivativním způsobem nabytí vlastnictví: "}>
+<Quiz question={"Derivativním způsobem nabytí vlastnictví: "} topic={vecnaPrava}>
   <QuizOption label={"vlastnictví zaniká – maximálně vlastnictví původního vlastníka"} isCorrect={true}>
-    (Instituce str.114 vlastnictví zaniká převodem, u derivativního způsobu nabytí vlastnictví dochází k převodu vlastnictví)
+    Instituce, s. 114: _„Zánik vlastnictví: z vůle vlastníka – převod vlastnictví.“_
   </QuizOption>
-  <QuizOption label={"vlastnictví se převádí"} isCorrect={false}>
-    (KUS – str. 171\)
+  <QuizOption label={"vlastnictví se převádí"} isCorrect={true}>
+    KUS, marg. č. 285, s. 169: _„U odvozených neboli derivativních způsobů se vychází z představy, že pro nabyvatele, který nabývá  vlastnické právo, má význam vlastnické právo jeho předchůdce, tedy dosavadního vlastníka či převodce. … Svoje místo tu však může mít i představa, že vlastnické právo přechází z jednoho subjektu na druhý, že dochází kjeho přesunu čili k sukcesi.“_
   </QuizOption>
-  <QuizOption label={"zaniká zástavní právo"} isCorrect={false}>
-    (KUS str.238)
+  <QuizOption label={"zaniká zástavní právo"} isCorrect={true}>
+    KUS, marg. č. 328, s. 209: _„Zástavní právo zanikalo rovněž zástavním prodejem věci při realizaci zástavního práva.“_
+
+    KUS, marg. č. 325, s. 207: _„Druhým základním oprávněním bylo právo prodat zástavu, které bylo výrazem uhrazovací (realizační) funkce zástavního práva. Předpokladem k tomu, aby měl věřitel k prodeji právo, byla dospělost pohledávky, dále to, že dlužník neplnil ani  po té, co byl kplnění vyzván a konečně uplynutípředepsané lhůty (v justiniánském právu to byla 2 léta). Zástavní prodej se dal u smluvených zástavních práv vykonat i z volné ruky, to znamená bez vydražení, ovšem zástavní věřitel musel hájit zájmy zástavcovy a vrátit mu přebytek neboli hyperochu. Kupci ručil zástavní věřitel jen za to, že dostal věc jako zástavu. Zástavce zastavenou věc nemohl koupit, zástavnímu věřiteli byla koupě zakázána. Nenašel-li se však kupec, mohl zástavní věřitel žádat, aby mu byla věc úředně přiřčena (císařským rozhodnutím).“_
   </QuizOption>
   <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Mezi derivativní způsoby nabytí vlastnictví nepatří: "}>
-  <QuizOption label={"adiudikace"} isCorrect={false}>
-    (soudním výrokem)
-  </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={true}>
-    
-  </QuizOption>
-  <QuizOption label={"tradice"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"mancipace"} isCorrect={false}>
-    
-  </QuizOption>
+<Quiz question={"Kdo je curator prodigi?"} topic={fyzickeOsoby}> 
   <QuizOption label={"opatrovník nad mentálně zaostalým"} isCorrect={false}>
-    (KUS – str. 151 – cura furiosi)
+    Ne, to je curator furiosi (Instituce, s. 62).
   </QuizOption>
   <QuizOption label={"poručník nad ženou"} isCorrect={false}>
-    (KUS – str. 151 – tutela mulierum)
-  </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    (KUS – str. 151\)
+    Ne, to je tutor mulierum (Instituce, s. 61-62).
   </QuizOption>
   <QuizOption label={"opatrovník nad nezletilým"} isCorrect={false}>
-    (KUS – str. 152 – cura minorum)
+    Ne, to je curator minorum (Instituce, s. 63).
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={true}>
+    Instituce, s. 63: _„Cura prodigi (opatrovnictví nad marnotratníkem): tomuto opatrovnictví podléhá pouze ten, kdo zdědil majetek ab intestato a jednalo se o majetek po předcích, opatrovník spravuje majetek marnotratníka v zájmu jeho budoucích dědiců …“_
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Omyl v osobě se označuje jako: "}>
+<Quiz question={"Omyl v osobě se označuje jako: "} topic={pravniJednani}>
   <QuizOption label={"error in sexu"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={true}>
-    (KUS – str. 95\)
+    Ne, viz Instituce, s. 294.
   </QuizOption>
   <QuizOption label={"error minoris"} isCorrect={false}>
-    
+    Ne, jedná se o error essentialis, viz Instituce, s. 294.
   </QuizOption>
   <QuizOption label={"error personalis"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"non nocet"} isCorrect={false}>
-    (neškodí)
-  </QuizOption>
-  <QuizOption label={"excusat"} isCorrect={false}>
-    (omlouvá)
+    Ne, viz Instituce, s. 294.    
   </QuizOption>
   <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={true}>
-    (KUS – str. 113, správná odpověď je non excusat)
+    Instituce, s. 294: _„Omyl v osobě (error in persona) - omyl v osobě proti strany právního jednání.“_
+  </QuizOption>
+</Quiz>
+
+<Quiz question={"Error iuris:"} topic={pravniJednani}>
+  <QuizOption label={"non nocet"} isCorrect={false}>
+    Ne, naopak, error iuris nocet – škodí (Instituce, s. 294).
+  </QuizOption>
+  <QuizOption label={"excusat"} isCorrect={false}>
+    Ne, naopak, error iuris non excusat – neomlouvá (Instituce, s. 294).
   </QuizOption>
   <QuizOption label={"adiuvat"} isCorrect={false}>
-    (přeje, pomáhá)
+    Ne, nelze se na něj odvolávat, tudíž nemůže pomáhat (adiuvat) (Instituce, s. 294).
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={true}>
+    Instituce, s. 294: _„Omyl v právu (error iuris) - neznalost práva (ignorantia iuris non excusat - neznalost práva neomlouvá; ignoran tia iuris nocet - neznalost práva škodí); nelze se odvolat na neznalost práva.“_
   </QuizOption>
 </Quiz>
 
-<Quiz question={"error esentialis je: "}>
+<Quiz question={"Error esentialis je: "} topic={pravniJednani}>
   <QuizOption label={"omyl podstatný"} isCorrect={true}>
-    (KUS – str. 95 \+ z moodle z cvičného testu 2020\)
-  </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
+    Ano, viz Instituce, s. 294.
   </QuizOption>
   <QuizOption label={"omyl omluvitelný"} isCorrect={false}>
-    (*z moodle z cvičného testu 2020\)
+    Ne, každý error essentialis není zároveň omyl omluvitelný.
+
+    KUS, marg. č. 186, s. 113: _„Podle římského právaje error probabilis (pravděpodobný, omluvitelný) pouze tehdy, týká-li se skutkových okolností, faktů. Týká-li se omyl práva, omluvitelný není, protože právo musí každý znát, neznalost zákona neomlouvá.“_
+
+    KUS, marg. č. 160, s. 95: _„Je-li příčinou nesouladu mezi vůlí a projevem omyl (v latině error) stává se 160 podle římského právajednání neplatným pouze tehdy, jde-li o tzv. omyl podstatný error essentialis. Podstatný je omyl tehdy, týká-li se a) povahy právního jednání, b) jednající osoby anebo c) předmětu jednání.“_
   </QuizOption>
   <QuizOption label={"omyl základní"} isCorrect={false}>
-    (není ve výčtu v Institucích na str. 294\)
+    Ne, nejedná se o základní omyl, viz Instituce, s. 294.
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>    
   </QuizOption>
 </Quiz>
 
-<Quiz question={"Error probabilis je: "}>
+<Quiz question={"Error probabilis je: "} topic={pravniJednani}>
   <QuizOption label={"omyl pravděpodobný"} isCorrect={true}>
-    (KUS – str. 113\)
-  </QuizOption>
-  <QuizOption label={"TADY SI PUSŤTE PANA LUKÁŠE KRILA, AŤ JE VÁM LÉPE—\> doporučení redakce J+P\!"} isCorrect={false}>
-    
+    KUS, marg. č. 186, s. 113: _„Podle římského právaje error probabilis (pravděpodobný, omluvitelný) pouze tehdy, týká-li se skutkových okolností, faktů. Týká-li se omyl práva, omluvitelný není, protože právo musí každý znát, neznalost zákona neomlouvá.“_
   </QuizOption>
   <QuizOption label={"omyl omluvitelný"} isCorrect={true}>
-    (KUS – str. 113)-*** přímo napsáno, že je i omluvitelný ne?Souhlasím
+    KUS, marg. č. 186, s. 113: _„Podle římského právaje error probabilis (pravděpodobný, omluvitelný) pouze tehdy, týká-li se skutkových okolností, faktů. Týká-li se omyl práva, omluvitelný není, protože právo musí každý znát, neznalost zákona neomlouvá.“_
   </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
+</Quiz>
+
+<Quiz question={"Error in negotio: "} topic={pravniJednani}>
   <QuizOption label={"omyl kupce"} isCorrect={false}>
     (*z nahlížení po testu)
   </QuizOption>
   <QuizOption label={"omyl v druhu právního jednání"} isCorrect={true}>
-    (KUS, str. 95), [http://www.ius-wiki.eu/rimske-pravo/slovnicek/error-in-negotio](http://www.ius-wiki.eu/rimske-pravo/slovnicek/error-in-negotio) \+ z nahlížení po testu)
+    Instituce, marg. č. 160, s. 95: _„[E]rror in negotio lze ilustrovat tímto příkladem: strana se domnívá, že dostává dar, vůle druhé strany je poskytnout zápůjčku - jednání nebude platné ani jako dar, ani jako zápůjčka;“_
   </QuizOption>
   <QuizOption label={"omyl spočívající v neznalosti obsahu právního jednání"} isCorrect={false}>
-    (error in substantia v Institucích str. 294 \+ z nahlížení po testu)
+    Ne, to je error in substantia (viz Instituce, s. 294).
+  </QuizOption>
+  <QuizOption label={"omyl v předmětu právního jednání "} isCorrect={false}>
+    Ne, to je error in in corpore (viz Instituce, s. 295).
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
 <Quiz question={"Gaius ulil v dobré víře sochu z Aulova bronzu, a tak dle justiniánského práva: "}>
   <QuizOption label={"se Gaius stal vlastníkem sochy"} isCorrect={false}>
-    (KUS – str. 181\)
+    Ne, vlastníkem sochy se stal Aulus, viz KUS, marg. č. 295, s. 181.
   </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"se Aulus stal vlastníkem sochy"} isCorrect={false}>
-    (KUS – str. 181 \- vlastníkem se stává majitel bronzu (Aulus), protože bronz je tavitelný a můžeme jej vrátit zpět do původního stavu)
+  <QuizOption label={"se Aulus stal vlastníkem sochy"} isCorrect={true}>
+    KUS, marg. č. 295, s. 181: _„Specifikace je nabytí vlastnictví zpracováním, kdy z určité věci (materiálu) vzniká zpracováním věc nová. … Základní je otázka, komu náleží vlastnictví nové věci, zda dosavadnímu vlastníku (tj. vlastníkovi materiálu) či tvůrci. … Nakonec převládlo mínění, které bylo jakousi střední cestou: tvůrce nabýval vlastnictví k zhotovené věci, nebylo-li možno obnovit původní stav před zhotovením (nesmělo ovšem jít o krádež materiálu); jinak zůstávalo zachováno vlastnictví původního majitele látky.“_
   </QuizOption>
   <QuizOption label={"došlo ke specifikaci"} isCorrect={true}>
-    (KUS – str. 181\) (nedošlo ke zpracování, i když vlastníkem zůstává Aulus?)
+    KUS, marg. č. 295, s. 181: _„Specifikace je nabytí vlastnictví zpracováním, kdy z určité věci (materiálu) vzniká zpracováním věc nová. … Základní je otázka, komu náleží vlastnictví nové věci, zda dosavadnímu vlastníku (tj. vlastníkovi materiálu) či tvůrci. … Nakonec převládlo mínění, které bylo jakousi střední cestou: tvůrce nabýval vlastnictví k zhotovené věci, nebylo-li možno obnovit původní stav před zhotovením (nesmělo ovšem jít o krádež materiálu); jinak zůstávalo zachováno vlastnictví původního majitele látky.“_
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
   </QuizOption>
 </Quiz>
 
 <Quiz question={"Gaius v době Justiniána vysekal v dobré víře sochu z Aulova mramoru, a tak: "}>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"se Gaius stal vlastníkem sochy"} isCorrect={false}>
+
+  <QuizOption label={"se Gaius stal vlastníkem sochy"} isCorrect={true}>
     (KUS str. 181 & Instituce str. 108: specificatio, podle Prokuliánů, v dobré víře, nedá se uvést do původního stavu a nebo částečně použil svůj materiál \= podle Justiniána \+ Instituce str. 109 – 6\) specificatio)
   </QuizOption>
   <QuizOption label={"se Aulus stal vlastníkem sochy"} isCorrect={false}>
@@ -2512,6 +2506,9 @@ Náš interaktivní test z římského práva je upravenou verzí známého _meg
   </QuizOption>
   <QuizOption label={"došlo k akcessi"} isCorrect={false}>
     (KUS str. 180 – spojení dvou věcí, nabytí přírůstkem & Instituce str. 106: nedošlo)
+  </QuizOption>
+  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
+    
   </QuizOption>
 </Quiz>
 
@@ -2615,21 +2612,16 @@ Náš interaktivní test z římského práva je upravenou verzí známého _meg
   <QuizOption label={"praetorské stipulace"} isCorrect={true}>
     (formální sliby, závazné podle civilního práva)
   </QuizOption>
-</Quiz>
-
-<Quiz question={"Mezi mimořádné magistrátské prostředky nepatří: "}>
-  <QuizOption label={"restitutio natalium"} isCorrect={true}>
+  <QuizOption label={"restitutio in rem"} isCorrect={true}>
+    (z nahlížení po testu)
+  </QuizOption>
+  <QuizOption label={"restQitutio natalium"} isCorrect={true}>
     (z nahlížení po testu \+ udělení ingenuity císařem, Instituce str. 66\)
   </QuizOption>
   <QuizOption label={"missio in detentionem"} isCorrect={true}>
     
   </QuizOption>
-  <QuizOption label={"restitutio in rem"} isCorrect={true}>
-    (z nahlížení po testu)
-  </QuizOption>
-  <QuizOption label={"restitutio in integrum"} isCorrect={false}>
-    (z nahlížení po testu \+ navrácení do předchozího stavu, Instituce str. 275\)
-  </QuizOption>
+
 </Quiz>
 
 <Quiz question={"Condemnatio ve formuli: "}>
@@ -2645,22 +2637,11 @@ Náš interaktivní test z římského práva je upravenou verzí známého _meg
   <QuizOption label={"pravidelně obsahuje poučení o opravných prostředcích"} isCorrect={false}>
     (Instituce, str. 284, Formula)
   </QuizOption>
-</Quiz>
-
-<Quiz question={"Condemnatio: "}>
-  <QuizOption label={"je hypoteticky formulovaný příkaz k odsouzení"} isCorrect={true}>
-    (Instituce, str. 269, Formula)
-  </QuizOption>
   <QuizOption label={"slouží k delegaci"} isCorrect={true}>
     (Instituce, str. 269, Formula)
   </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    (Instituce, str. 284, Formula)
-  </QuizOption>
-  <QuizOption label={"je jiné označení pro rozsudek"} isCorrect={false}>
-    (Instituce, str. 284, Formula)
-  </QuizOption>
 </Quiz>
+
 
 <Quiz question={"Condicio z hlediska obsahu právního jednání je jeho: "}>
   <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
@@ -2686,21 +2667,6 @@ Náš interaktivní test z římského práva je upravenou verzí známého _meg
   </QuizOption>
   <QuizOption label={"marnotratníka"} isCorrect={false}>
     (Instituce, str. 55, duševní nemoc)
-  </QuizOption>
-</Quiz>
-
-<Quiz question={"Podmínka se latinsky NEřekne: "}>
-  <QuizOption label={"condictio"} isCorrect={false}>
-    (žaloba znějící na přesně stanovenou částku)
-  </QuizOption>
-  <QuizOption label={"communio"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"condicio"} isCorrect={false}>
-    
-  </QuizOption>
-  <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
-    
   </QuizOption>
 </Quiz>
 
@@ -2734,7 +2700,7 @@ Náš interaktivní test z římského práva je upravenou verzí známého _meg
   </QuizOption>
 </Quiz>
 
-<Quiz question={"14letý Říman-sirotek: "}>
+<Quiz question={"Čtrnáctiletý Říman sirotek: "}>
   <QuizOption label={"ani jedna z nabízených odpovědí"} isCorrect={false}>
     
   </QuizOption>
