Plánovač studia, test z Kriminologie I a drobné úpravy obsahu

--- a/docs/povinne-predmety/rimske-pravo/rimske-pravo-test.mdx
+++ b/docs/povinne-predmety/rimske-pravo/rimske-pravo-test.mdx
@@ -13,7 +13,9 @@ export const civilniProces = "Civilní proces"
 export const fyzickeOsoby = "Fyzické osoby"
 
 :::info Úvod 
-Náš interaktivní test z římského práva je upravenou verzí známého _mega souboru_. Níže si můžete vybrat, která témata chcete procvičit. Každá odpověď k otázce obsahuje také citaci z KUSu, nebo Institucí, která danou otázku vysvětluje.
+Test z římského práva je upravenou verzí známého _mega souboru_. Níže si můžete vybrat, která témata chcete procvičit. Každá odpověď k otázce obsahuje také vysvětlující citaci z KUSu, nebo Institucí. 
+
+Na zpracování všech otázek usilovně pracujeme. 🧑‍💻
 :::
 
 <QuizFilter>
