Přehled praxí a local search.

--- a/docs/studijni-opory/planovac-studia.mdx
+++ b/docs/studijni-opory/planovac-studia.mdx
@@ -2,7 +2,6 @@
 title: Plánovač studia
 description: Plánujte si studium na Právnické fakultě UK. Vybírejte předměty, sledujte kredity a exportujte si plán.
 sidebar_position: 1
-hide_table_of_contents: true
 ---
 
 import StudyPlanner from '../../src/components/StudyPlanner';
@@ -17,7 +16,7 @@ import StudyPlanner from '../../src/components/StudyPlanner';
 
 ---
 
-## Zdroj dat
+## Zdroje
 **Poslední aktualizace:** 20.01.2026.
 
 Podmínky studijního plánu jsou převzaty ze [studijního plánu HPRAVO2023](https://www.prf.cuni.cz/studijni-plany/studijni-plan-hpravo2023). 
